# ezored-server

./: .travis.yml  README.md  appveyor.yml  make.py
files/cmake/common/: CMakeLists.txt
files/config/: target_linux_app.py  target_linux_rpi_app.py  target_macos_app.py  target_windows_app.py
files/targets/linux_app/cmake/: CMakeLists.txt
files/targets/linux_app/conan/recipe/: conanfile.py
files/targets/linux_app_rpi/cmake/: CMakeLists.txt
files/targets/linux_app_rpi/conan/profile/: ezored_linux_app_rpi_profile
files/targets/linux_app_rpi/conan/recipe/: conanfile.py
files/targets/linux_app_rpi/verbs/: build.py  conan.py  package.py
files/targets/macos_app/cmake/: CMakeLists.txt
files/targets/macos_app/conan/recipe/: conanfile.py
files/targets/windows_app/cmake/: CMakeLists.txt
files/targets/windows_app/conan/recipe/: conanfile.py
projects/server/src/: main.cpp
projects/server/src/ezored/server/apps/: SimpleServer.cpp  SimpleServer.hpp
projects/server/src/ezored/server/controllers/: BaseController.cpp  BaseController.hpp  PingController.cpp  PingController.hpp
projects/server/src/ezored/server/factories/: SimpleRequestHandlerFactory.cpp  SimpleRequestHandlerFactory.hpp
projects/server/src/ezored/server/handlers/: SimpleRequestHandler.cpp  SimpleRequestHandler.hpp
projects/server/src/ezored/server/helpers/: WebHelper.cpp  WebHelper.hpp
